--- a/my-react-app/src/components/card/card.css
+++ b/my-react-app/src/components/card/card.css
@@ -11,6 +11,7 @@
   backface-visibility: hidden;
   transform: translateZ(0);
   transition: transform 0.25s ease-out;
+  text-align: center;
 }
 
 .card-container:hover {
