--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -1,5 +1,13 @@
+body {
+  padding: 30px 0;
+}
+
 .App {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  text-align: center;
+}
+
+h1 {
+  font-family: "Bigelow Rules";
+  font-size: 72px;
+  color: #0ccac4;
 }
