--- a/my-react-app/src/components/card/card.css
+++ b/my-react-app/src/components/card/card.css
@@ -1,10 +1,10 @@
 .card-container {
   display: flex;
   flex-direction: column;
-  background-color: #0c0968;
+  background-color: rgba(0, 0, 0, 0.7);
   border: 1px solid #0b0a30;
   border-radius: 5px;
-  padding: 25px;
+  padding: 15px;
   cursor: pointer;
   color: #fff;
   -moz-osx-font-smoothing: grayscale;
